Added dockerization
